dune https://en.wikipedia.org:443/wiki/Sports_in_the_United_States 20 6.092851454041346E-4 https://en.wikipedia.org:443/wiki/IndyCar_Series 20 4.920059963399543E-4 https://en.wikipedia.org:443/wiki/Ice_hockey 21 3.8004161940528007E-4 https://en.wikipedia.org:443/wiki/National_monument_(United_States) 21 0.0014669934254950303 https://en.wikipedia.org:443/wiki/History_of_the_United_States_(2008%E2%80%93present) 21 4.4636892929315994E-4 https://en.wikipedia.org:443/wiki/Indiana 21 0.0012333893414898111 https://en.wikipedia.org:443/wiki/Jack_Nicklaus 20 3.534200049253829E-4 